--- a/FinalWebApp/FinalWebApp/wwwroot/css/site.css
+++ b/FinalWebApp/FinalWebApp/wwwroot/css/site.css
@@ -12,8 +12,28 @@ for details on configuring this project to bundle and minify static web assets. 
     float: none;
     margin: 0 auto;
 }
-.statistics-container  {
-    margin-top: 5rem;
+
+@media (min-width: 576px) {
+    .modal-dialog {
+        max-width: 800px;
+        margin: 1.75rem auto;
+    }
+}
+.filter {
+    position: fixed;
+    background-color: white;
+    padding-left: 1rem;
+}
+
+#filter {
+    padding: 2rem;
+}
+
+.filter-label {
+    margin-top: 2rem;
+}
+
+.statistics-container {
     padding: 5rem;
     text-align: center;
     background-color: whitesmoke;
@@ -83,7 +103,7 @@ body {
 
 .search-form {
     margin-top: 5rem;
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
 }
 
 .mapouter {
@@ -197,4 +217,8 @@ p {
 
 footer {
     bottom: 0;
+}
+
+.statistics-graphs {
+    width: 800px;
 }
