--- a/FinalWebApp/FinalWebApp/Views/_ViewStatistics.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/_ViewStatistics.cshtml
@@ -1,16 +1,17 @@
-﻿<div class="modal-dialog">
+﻿<div class="modal-dialog modal-statistics">
+    <div class="modal-statistics">
+        <div class="modal-content statistics-graphs center-block">
+            <div class="modal-header">
+                <h4 class="modal-title">Statistics</h4>
+            </div>
 
-    <div class="modal-content statistics-graphs center-block">
-        <div class="modal-header">
-            <h4 class="modal-title">Statistics</h4>
-        </div>
-
-        <div class="statistics-container">
-            <span class="col-centered" id="StatisticsGraph1"></span>
-            <span class="col-centered" id="StatisticsGraph2"></span>
-            <br />
-            <span>orders in cities</span>
-            <span>hotels in top city</span>
+            <div class="statistics-container">
+                <span class="col-centered" id="StatisticsGraph1"></span>
+                <span class="col-centered" id="StatisticsGraph2"></span>
+                <br />
+                <span>orders in cities</span>
+                <span>hotels in top city</span>
+            </div>
         </div>
     </div>
 </div>
