--- a/FinalWebApp/FinalWebApp/wwwroot/css/site.css
+++ b/FinalWebApp/FinalWebApp/wwwroot/css/site.css
@@ -12,13 +12,17 @@ for details on configuring this project to bundle and minify static web assets. 
     float: none;
     margin: 0 auto;
 }
+.modal-statistics {
+    max-width: 800px;
+    margin: 1.75rem auto;
+}
 
 @media (min-width: 576px) {
-    .modal-dialog {
-        max-width: 800px;
-        margin: 1.75rem auto;
+    .modal-dialog.modal-statistics {
+        max-width: 100%;
     }
 }
+
 .filter {
     position: fixed;
     background-color: white;
@@ -160,7 +164,7 @@ body {
 .offer {
     padding: 0.5rem;
     background-color: whitesmoke;
-    margin-top: 8rem;
+    margin-top: 3rem;
     width: 100%;
     height: 100%;
 }
