--- a/FinalWebApp/FinalWebApp/wwwroot/css/site.css
+++ b/FinalWebApp/FinalWebApp/wwwroot/css/site.css
@@ -144,3 +144,18 @@ body {
 .navbar-buttons{
     right: 0;
 }
+
+
+
+#placeinputbutton {
+	color: black;
+	width: 80px;
+	height: 35px;
+	background: yellow;
+	transition: width 2s, height 2s;
+}
+
+	#placeinputbutton:hover {
+		color: black;
+		width: 150px;
+	}
