--- a/FinalWebApp/FinalWebApp/Views/Home/Index.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Home/Index.cshtml
@@ -1,33 +1,37 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<div class="col-md-10 center-block headline">
+    Welcome to Holidai
 
+</div>
 <div class="container-fluid">
     <div class="row search-form">
-        <div class="col-md-4">
+        <div class="col-md-5">
             <div class="search-item">
                 <form action="/search" method="get" id="search-form">
-                    <input id="placeinput" required type="text" autofocus="true" class="form-control" name="place" placeholder="Hotel, City, Country...">
+                    <input id="placeinput" required type="text" autofocus="true" class="input form-control" name="place" placeholder="Hotel, City, Country...">
                 </form>
             </div>
         </div>
+        
         <div class="col-md-3">
-            <label>Enter date</label>
-            <input id="endDate" class="form-control" type="date" form="search-form" name="checkin" />
+            <label>Check-in</label>
+            <input id="endDate" class="input form-control" type="date" form="search-form" name="checkin" />
         </div>
         <div class="col-md-3">
-            <label>Leave date</label>
-            <input id="startDate" class="form-control" type="date" form="search-form" name="checkout"/>
+            <label>Check-out</label>
+            <input id="startDate" class="input form-control " type="date" form="search-form" name="checkout"/>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-1">
             <div class="input-group-btn search-item">
-                <button id="placeinputbutton" class="btn btn-info" type="submit" form="search-form">Search</button>
+                <button id="placeinputbutton" class="input btn btn-info input" type="submit" form="search-form">Search</button>
             </div>
         </div>
     </div>
 
     <div class="form-group col-md-offset-5 text-center search-item">
-        <button class="btn btn-info" type="button" onclick="showOrHideFeatures()">Try our special search</button>
+        <button class="input btn btn-info ai" type="button" onclick="showOrHideFeatures()">Try our AI-based search</button>
     </div>
 
     <div class="col-md-12" id="featuresView" style="display: none">
