--- a/FinalWebApp/FinalWebApp/Views/Home/Index.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 <div class="col-md-10 center-block headline">
-    Welcome to Holidai
+    Welcome to <span><img src="~/images/Logos/logo.png" height="60px" class="welcom"/></span>
 
 </div>
 <div class="container-fluid">
