--- a/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
@@ -7,6 +7,7 @@
 	var cityName = Model.CityName;
 	var toPrice = Model.toPrice;
 	var place = Model.place;
+	var isAi = Model.isAiSearch;
 }
 
 <aside>
@@ -69,6 +70,12 @@
 					<span class="input-group-btn">
 						<input value="@checkin" name="checkin" form="offer-form" hidden />
 						<input value="@checkout" name="checkout" form="offer-form" hidden />
+						<input value="@isAi.ToString()" name="isAiSearch" form="offer-form" hidden />
+						<input value="@Model.Features.Age" name="userAge" form="offer-form" hidden />
+						<input value="@Model.Features.Gender" name="userGender" form="offer-form" hidden />
+						<input value="@Model.Features.FamilyStatus" name="userFamilyStatus" form="offer-form" hidden />
+						<input value="@Model.Features.hobby" name="userHobby" form="offer-form" hidden />
+						<input value="@Model.Features.purpose" name="userPurpose" form="offer-form" hidden />
 						<button class="btn btn-info" type="submit" form="offer-form" value="@hotel.Id" name="id">View Offer</button>
 					</span>
 				</div>
