--- a/FinalWebApp/FinalWebApp/Views/Home/About.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Home/About.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
-    ViewData["Title"] = "About";
+	ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
 <p>Use this area to provide additional information.</p>
+
+<video width="320" height="240" controls autoplay>
+	<source src="~/images/HotelsImages/video.mp4" type="video/mp4">
+</video>
