--- a/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
@@ -38,8 +38,12 @@
         <div>
             @foreach (var price in Model.PriceAggregation.OrderByDescending(x => x.MaxPrice))
             {
-                <input type="submit" value="Less then @price.MaxPrice" name="toprice" form="filter" />
-                <br />
+                <div>
+                    Less Then 
+                    <span>
+                        <input type="submit" value="@price.MaxPrice" name="toprice" form="filter" />
+                    </span>
+                </div>
             }
 
         </div>
@@ -71,11 +75,11 @@
 						<input value="@checkin" name="checkin" form="offer-form" hidden />
 						<input value="@checkout" name="checkout" form="offer-form" hidden />
 						<input value="@isAi.ToString()" name="isAiSearch" form="offer-form" hidden />
-						<input value="@Model.Features.Age" name="userAge" form="offer-form" hidden />
-						<input value="@Model.Features.Gender" name="userGender" form="offer-form" hidden />
-						<input value="@Model.Features.FamilyStatus" name="userFamilyStatus" form="offer-form" hidden />
-						<input value="@Model.Features.hobby" name="userHobby" form="offer-form" hidden />
-						<input value="@Model.Features.purpose" name="userPurpose" form="offer-form" hidden />
+						<input value="@Model.Features?.Age" name="userAge" form="offer-form" hidden />
+						<input value="@Model.Features?.Gender" name="userGender" form="offer-form" hidden />
+						<input value="@Model.Features?.FamilyStatus" name="userFamilyStatus" form="offer-form" hidden />
+						<input value="@Model.Features?.hobby" name="userHobby" form="offer-form" hidden />
+						<input value="@Model.Features?.purpose" name="userPurpose" form="offer-form" hidden />
 						<button class="btn btn-info" type="submit" form="offer-form" value="@hotel.Id" name="id">View Offer</button>
 					</span>
 				</div>
