--- a/FinalWebApp/FinalWebApp/wwwroot/css/site.css
+++ b/FinalWebApp/FinalWebApp/wwwroot/css/site.css
@@ -27,6 +27,7 @@ for details on configuring this project to bundle and minify static web assets. 
     position: fixed;
     background-color: white;
     padding-left: 1rem;
+    padding-bottom:2rem;
 }
 
 #filter {
