--- a/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
@@ -51,11 +51,11 @@
     <ul class="hotel-result-list col-md-9 col-md-offset-3">
         @foreach (var hotel in Model.hotels)
         {
-            <li class="row hotel-result col-md-9 col-md-offset-3">
-                <div class="col-md-3 hotel-image">
+            <li class="row hotel-result col-md-12">
+                <div class="col-md-4 hotel-image">
                     <img src="~/images/HotelsImages/@hotel.Id/image.jpg" style="object-fit:cover; width:100%" />
                 </div>
-                <div class="col-md-4 hotel-title" style="height:200px">
+                <div class="col-md-5 hotel-title" style="height:200px">
                     <h2>
                         @hotel.Name
                         <br />
@@ -64,27 +64,45 @@
                         @hotel.Address
                     </h5>
                 </div>
-                <div class="col-md-3" style="height:200px">
-                    <div class="hotel-ofer">
-                        <h2 class="price">
-                            @hotel.Price
+                <div class="center-block col-md-3" style="height:200px">
+                    <div class="hotel-ofer center-block">
+                        <h2 class="price center-block">
+                            @hotel.Price<span> $</span>
                         </h2>
+                        @{
+                            var rooms = "rooms";
+                            if (hotel.Available == 0)
+                            {
+                                 <div>
+                                    Not available any more!
+                                 </div>
+                            }
+                            else if (hotel.Available == 1)
+                            {
+                                rooms = "room";
+                            }
+                            else //if(hotel.Available < 10)
+                            {
+                                <div>
+                                    @hotel.Available @rooms left
+                                </div>
+                            }
+                        }
 
-					<form action="/Search/HotelDetails" method="post" id="offer-form"></form>
-					<span class="input-group-btn">
-						<input value="@checkin" name="checkin" form="offer-form" hidden />
-						<input value="@checkout" name="checkout" form="offer-form" hidden />
-						<input value="@isAi.ToString()" name="isAiSearch" form="offer-form" hidden />
-						<input value="@Model.Features?.Age" name="userAge" form="offer-form" hidden />
-						<input value="@Model.Features?.Gender" name="userGender" form="offer-form" hidden />
-						<input value="@Model.Features?.FamilyStatus" name="userFamilyStatus" form="offer-form" hidden />
-						<input value="@Model.Features?.hobby" name="userHobby" form="offer-form" hidden />
-						<input value="@Model.Features?.purpose" name="userPurpose" form="offer-form" hidden />
-						<button class="btn btn-info" type="submit" form="offer-form" value="@hotel.Id" name="id">View Offer</button>
-					</span>
-				</div>
-			</div>
-
+                        <form action="/Search/HotelDetails" method="post" id="offer-form"></form>
+                        <div class="input-group-btn">
+                            <input value="@checkin" name="checkin" form="offer-form" hidden />
+                            <input value="@checkout" name="checkout" form="offer-form" hidden />
+                            <input value="@isAi.ToString()" name="isAiSearch" form="offer-form" hidden />
+                            <input value="@Model.Features?.Age" name="userAge" form="offer-form" hidden />
+                            <input value="@Model.Features?.Gender" name="userGender" form="offer-form" hidden />
+                            <input value="@Model.Features?.FamilyStatus" name="userFamilyStatus" form="offer-form" hidden />
+                            <input value="@Model.Features?.hobby" name="userHobby" form="offer-form" hidden />
+                            <input value="@Model.Features?.purpose" name="userPurpose" form="offer-form" hidden />
+                            <button class="btn btn-info" type="submit" form="offer-form" value="@hotel.Id" name="id">View Details</button>
+                        </div>
+                    </div>
+			    </div>
             </li>
         }
         @if (Model.hotels.Count == 0)
