--- a/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
@@ -73,7 +73,7 @@
                             var rooms = "rooms";
                             if (hotel.Available == 0)
                             {
-                                 <div>
+                                 <div class="notavailable">
                                     Not available any more!
                                  </div>
                             }
@@ -83,24 +83,27 @@
                             }
                             else //if(hotel.Available < 10)
                             {
-                                <div>
+                                <div class="availabe">
                                     @hotel.Available @rooms left
                                 </div>
                             }
                         }
 
-                        <form action="/Search/HotelDetails" method="post" id="offer-form"></form>
-                        <div class="input-group-btn">
-                            <input value="@checkin" name="checkin" form="offer-form" hidden />
-                            <input value="@checkout" name="checkout" form="offer-form" hidden />
-                            <input value="@isAi.ToString()" name="isAiSearch" form="offer-form" hidden />
-                            <input value="@Model.Features?.Age" name="userAge" form="offer-form" hidden />
-                            <input value="@Model.Features?.Gender" name="userGender" form="offer-form" hidden />
-                            <input value="@Model.Features?.FamilyStatus" name="userFamilyStatus" form="offer-form" hidden />
-                            <input value="@Model.Features?.hobby" name="userHobby" form="offer-form" hidden />
-                            <input value="@Model.Features?.purpose" name="userPurpose" form="offer-form" hidden />
-                            <button class="btn btn-info" type="submit" form="offer-form" value="@hotel.Id" name="id">View Details</button>
-                        </div>
+                        @if (hotel.Available>0)
+                        {
+                             <form action="/Search/HotelDetails" method="post" id="offer-form"></form>
+                              <div class="input-group-btn">
+                                  <input value="@checkin" name="checkin" form="offer-form" hidden />
+                                <input value="@checkout" name="checkout" form="offer-form" hidden />
+                                <input value="@isAi.ToString()" name="isAiSearch" form="offer-form" hidden />
+                                <input value="@Model.Features?.Age" name="userAge" form="offer-form" hidden />
+                                <input value="@Model.Features?.Gender" name="userGender" form="offer-form" hidden />
+                                <input value="@Model.Features?.FamilyStatus" name="userFamilyStatus" form="offer-form" hidden />
+                                <input value="@Model.Features?.hobby" name="userHobby" form="offer-form" hidden />
+                                <input value="@Model.Features?.purpose" name="userPurpose" form="offer-form" hidden />
+                                <button class="btn btn-info" type="submit" form="offer-form" value="@hotel.Id" name="id">View Details</button>
+                            </div>
+                        }
                     </div>
 			    </div>
             </li>
