--- a/FinalWebApp/FinalWebApp/wwwroot/css/site.css
+++ b/FinalWebApp/FinalWebApp/wwwroot/css/site.css
@@ -17,6 +17,13 @@ for details on configuring this project to bundle and minify static web assets. 
     margin: 1.75rem auto;
 }
 
+.notavailable{
+    color:darkred;
+}
+.availabe{
+    color:darkgreen;
+}
+
 @media (min-width: 576px) {
     .modal-dialog.modal-statistics {
         max-width: 100%;
