--- a/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
@@ -64,16 +64,16 @@
                         @hotel.Address
                     </h5>
                 </div>
-                <div class="center-block col-md-3" style="height:200px">
+                <div class="col-md-3" style="height:200px">
                     <div class="hotel-ofer center-block">
-                        <h2 class="price center-block">
+                        <h2 class="centertext price">
                             @hotel.Price<span> $</span>
                         </h2>
                         @{
                             var rooms = "rooms";
                             if (hotel.Available == 0)
                             {
-                                 <div class="notavailable">
+                                 <div class="centertext notavailable">
                                     Not available any more!
                                  </div>
                             }
@@ -83,7 +83,7 @@
                             }
                             else //if(hotel.Available < 10)
                             {
-                                <div class="availabe">
+                                <div class="centertext availabe">
                                     @hotel.Available @rooms left
                                 </div>
                             }
@@ -101,7 +101,7 @@
                                 <input value="@Model.Features?.FamilyStatus" name="userFamilyStatus" form="offer-form" hidden />
                                 <input value="@Model.Features?.hobby" name="userHobby" form="offer-form" hidden />
                                 <input value="@Model.Features?.purpose" name="userPurpose" form="offer-form" hidden />
-                                <button class="btn btn-info" type="submit" form="offer-form" value="@hotel.Id" name="id">View Details</button>
+                                <button class="input ordernow btn-info" type="submit" form="offer-form" value="@hotel.Id" name="id">View Details</button>
                             </div>
                         }
                     </div>
