--- a/FinalWebApp/FinalWebApp/wwwroot/css/site.css
+++ b/FinalWebApp/FinalWebApp/wwwroot/css/site.css
@@ -16,7 +16,15 @@ for details on configuring this project to bundle and minify static web assets. 
     max-width: 800px;
     margin: 1.75rem auto;
 }
-
+.centertext{
+    text-align:center;
+}
+.ordernow{
+    margin-top: 2rem;
+    height:3rem;
+    width:10rem;
+    background-color:forestgreen;
+}
 .notavailable{
     color:darkred;
 }
