--- a/FinalWebApp/FinalWebApp/Views/Users/Edit.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/Edit.cshtml
@@ -30,8 +30,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <input asp-for="Gender" class="form-control" />
-                <span asp-validation-for="Gender" class="text-danger"></span>
+                <select asp-items="Html.GetEnumSelectList<Gender>()" class="form-control" id="gender" form="pred" name="Gender" required>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="City" class="control-label"></label>
@@ -41,13 +41,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Profession" class="control-label"></label>
-                <input asp-for="Profession" class="form-control" />
-                <span asp-validation-for="Profession" class="text-danger"></span>
+                <select asp-items="Html.GetEnumSelectList<Profession>()" class="form-control" id="profession" form="pred" name="Profession"></select>
             </div>
             <div class="form-group">
                 <label asp-for="FamilyStatus" class="control-label"></label>
-                <select asp-for="FamilyStatus" class="form-control"></select>
-                <span asp-validation-for="FamilyStatus" class="text-danger"></span>
+                <select asp-items="Html.GetEnumSelectList<FamilyStatus>()" class="form-control" id="gender" form="pred" name="Gender" required></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
