fixing orders views

--- a/FinalWebApp/FinalWebApp/Views/Orders/Details.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Orders/Details.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
-
 <div>
     <h4>Order</h4>
     <hr />
@@ -37,6 +35,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+      <a class="btn btn-danger" asp-action="Index">Back to List</a>
 </div>
