--- a/FinalWebApp/FinalWebApp/Views/Orders/Index.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Orders/Index.cshtml
@@ -4,57 +4,58 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
-
-<p>
-    <a asp-action="Create" class="btn btn-info">+</a>
-</p>
+@*@if (Globals.getConnectedUser(Context.Session) != null)
+{
+    <p>
+        <a asp-action="Create" class="btn btn-info">+</a>
+    </p>
+}*@
 <table class="table table-info table-striped">
     <thead class="thead-light">
-		<tr>
-			<th scope="col">
-				@Html.DisplayNameFor(model => model.HotelId)
-			</th>
-			<th scope="col">
-				@Html.DisplayNameFor(model => model.Name)
-			</th>
-			<th scope="col">
-				@Html.DisplayNameFor(model => model.Email)
-			</th>
-			<th scope="col">
-				@Html.DisplayNameFor(model => model.CheckInDate)
-			</th>
-			<th scope="col">
-				@Html.DisplayNameFor(model => model.CheckOutDate)
-			</th>
-			<th scope="col"></th>
-		</tr>
+        <tr>
+            <th scope="col">
+                @Html.DisplayNameFor(model => model.HotelId)
+            </th>
+            <th scope="col">
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th scope="col">
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th scope="col">
+                @Html.DisplayNameFor(model => model.CheckInDate)
+            </th>
+            <th scope="col">
+                @Html.DisplayNameFor(model => model.CheckOutDate)
+            </th>
+            <th scope="col"></th>
+        </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
-		<tr>
-			<td>
-				@Html.DisplayFor(modelItem => item.HotelId)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.Name)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.Email)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.CheckInDate)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.CheckOutDate)
-			</td>
-			<td>
-				<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-				<a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-				<a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-			</td>
-		</tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.HotelId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CheckInDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CheckOutDate)
+            </td>
+            <td>
+                @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |*@
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id" asp-route-userId="@item.UserId">Delete</a>
+            </td>
+        </tr>
         }
     </tbody>
 </table>
