--- a/FinalWebApp/FinalWebApp/Views/_ViewStatistics.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/_ViewStatistics.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="modal-dialog modal-statistics">
     <div class="modal-statistics">
-        <div class="modal-content statistics-graphs center-block">
+        <div class="modal-content center-block">
             <div class="modal-header">
                 <h4 class="modal-title">Statistics</h4>
             </div>
@@ -8,9 +8,11 @@
             <div class="statistics-container">
                 <span class="col-centered" id="StatisticsGraph1"></span>
                 <span class="col-centered" id="StatisticsGraph2"></span>
-                <br />
-                <span>orders in cities</span>
-                <span>hotels in top city</span>
+            </div>
+
+            <div class="statistics-container pb-5">
+                <span class="col-centered">orders in cities</span>
+                <span class="col-centered">hotels in top city</span>
             </div>
         </div>
     </div>
