more ui changes

--- a/FinalWebApp/FinalWebApp/Views/Home/About.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Home/About.cshtml
@@ -1,11 +1,13 @@
 ﻿@{
 	ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<div class="container text-center">
+    <h2>@ViewData["Title"]</h2>
+    <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+    <p>Use this area to provide additional information.</p>
 
-<video width="320" height="240" controls autoplay>
-	<source src="~/images/HotelsImages/video.mp4" type="video/mp4">
-</video>
+    <video width="400" height="280" controls autoplay>
+        <source src="~/images/HotelsImages/video.mp4" type="video/mp4">
+    </video>
+</div>
