--- a/FinalWebApp/FinalWebApp/Views/Orders/SummeryView.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Orders/SummeryView.cshtml
@@ -6,13 +6,13 @@
 
 <div class="container col-md-8 col-lg-offset-2 summery-view">
 	<div style="text-align: center;" class="container">
-		<canvas id="myCanvas" width="400" height="100" style="border:1px solid #d3d3d3;"></canvas>
+		<canvas id="myCanvas" width="400" height="80" style="border:1px solid #d3d3d3;"></canvas>
 	</div>
 	<script>
 		var c = document.getElementById("myCanvas");
 		var ctx = c.getContext("2d");
 		ctx.font = "30px Arial";
-		ctx.strokeText("Order Successfuly saved!",10,50);
+		ctx.strokeText("Order Successfuly saved!",25,50);
 	</script>
 	<table class="table table-striped">
 		<thead>
@@ -52,6 +52,10 @@
 			</tr>
 		</tbody>
 	</table>
-	<iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fwww.facebook.com%2FHolidai-386395071914370%2F%3Fmodal%3Dadmin_todo_tour&layout=button_count&size=large&mobile_iframe=false&appId=431422607399723&width=84&height=28" width="84" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-	<button type="button" class="btn btn-info" id="ok-order">OK</button>
+    <div>
+        <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fwww.facebook.com%2FHolidai-386395071914370%2F%3Fmodal%3Dadmin_todo_tour&layout=button_count&size=large&mobile_iframe=false&appId=431422607399723&width=84&height=28"
+                width="120" height="28" style="border:none;overflow:hidden" scrolling="no"
+                frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+        <button type="button" class="btn btn-info" id="ok-order">OK</button>
+    </div>
 </div>
