--- a/FinalWebApp/FinalWebApp/wwwroot/css/site.css
+++ b/FinalWebApp/FinalWebApp/wwwroot/css/site.css
@@ -72,8 +72,8 @@ for details on configuring this project to bundle and minify static web assets. 
 
 body {
     height: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 70px;
+    padding-bottom: 70px;
     background: url(../images/backslplash2.png) no-repeat center fixed;
     background-size: cover;
 }
@@ -118,21 +118,24 @@ body {
     
 }
 
-.headline{
-    margin-top:10rem;
-    font-size:50px !important;
-    font-weight:800;
+.headline {
+    margin-top: 7rem;
+    font-size: 50px !important;
+    font-weight: 800;
     color: dimgray;
-    text-align:center;
+    text-align: center;
     margin-right: auto;
-    margin-left: auto;  
+    margin-left: auto;
+}
+
+.special-search {
+    border-radius: 20px !important;
 }
 
 .input {
     border-radius: 40px !important;
     border-width: 1.5px !important;
     border-color: darkcyan !important;
-    
 }
 
 label{
@@ -177,12 +180,12 @@ label{
 }
 
 .welcom{
-    margin-bottom:2rem;
+    margin-bottom:1rem;
 }
 
 .ai{
-    margin-top:3rem ;
-    padding: 20px !important;
+    margin-top:2rem ;
+    padding: 10px !important;
 }
 .navbar button {
     margin-left: 4px;
@@ -289,7 +292,10 @@ footer {
     transition: width 2s, height 2s;
 }
 
-	#placeinputbutton:hover {
-		color: black;
-		width: 150px;
-	}
+#placeinputbutton:hover {
+	color: black;
+	width: 150px;
+}
+#ok-order{
+    float: right;
+}
