--- a/FinalWebApp/FinalWebApp/Views/Users/Details.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/Details.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
-
 <div>
     <h4>User</h4>
     <hr />
@@ -56,5 +54,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-danger" asp-action="Index">Back to List</a>
 </div>
