--- a/FinalWebApp/FinalWebApp/Views/Users/Edit.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/Edit.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
-
 <h4>User</h4>
 <hr />
 <div class="row">
@@ -13,10 +11,16 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="IsAdmin"/>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
@@ -30,8 +34,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <select asp-items="Html.GetEnumSelectList<Gender>()" class="form-control" id="gender" form="pred" name="Gender" required>
-                </select>
+                <select asp-items="Html.GetEnumSelectList<Gender>()" class="form-control" id="gender" form="pred" name="Gender" required></select>
             </div>
             <div class="form-group">
                 <label asp-for="City" class="control-label"></label>
@@ -53,11 +56,12 @@
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+@if (Globals.isAdminConnected(Context.Session))
+{
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
+}
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
